test of citation

--- a/final-project-migrant.qmd
+++ b/final-project-migrant.qmd
@@ -91,7 +91,7 @@ set.seed(1234)
 ```
 
 ## Introduction
-
+This is an inserted citation [@adamFiscalDecentralizationPublic2014].
 
 
 ### Literature Review {#sec-lit-review}
