--- a/migrant-student-education.tex
+++ b/migrant-student-education.tex
@@ -150,8 +150,8 @@
 
 
 
-\title{Education Funding, Subsidies, and Academic Performance Gap
-between Migrant and Local Students in China}
+\title{Education Funding Inequality and Academic Performance Gap between
+Migrant and Local Students in China}
 
 
 \shorttitle{D2MR Final Project}
@@ -293,31 +293,135 @@ Zou, MA Program in the Social Sciences, University of Chicago, 1155 E
 \setlength\LTleft{0pt}
 
 
-\subsection{Introduction}\label{introduction}
+\section{Introduction}\label{introduction}
 
-This is an inserted citation
-(\citeproc{ref-adamFiscalDecentralizationPublic2014}{Adam et al.,
-2014}).
+Internal migration in China has accelerated along with urbanization
+since the implementation of Reform and Opening Up policy in the early
+1980s. Statistics from the 7th National Census in 2020 show that over 70
+million children in China have migration status, which means one fourth
+of Chinese child population move interprovincially or intraprovincially
+with their parents \footnote{See in
+  \href{https://www.163.com/dy/article/JHFCU34705560ZWH.html}{Promoting
+  reunion and avoiding separation - China's migrant children development
+  report 2024}.}. Education and sociology research focusing on internal
+migrant students found that these children have a relatively lower
+school achievement compared to local students without migrant status,
+and suffer from academic and financial difficulties, as well as
+alienation in public education system
+(\citeproc{ref-chenAccessPublicSchools2013}{Chen \& Feng, 2013};
+\citeproc{ref-huangMythMigrantsProblems2017a}{Huang, 2017}).
 
-\subsection{Literature Review}\label{sec-lit-review}
+Previous studies offered policy explanations for migrant students'
+underachievement. Li (\citeproc{ref-liDataAnalysisCurrent2018}{2018})
+indicated that central governments have less educational funding
+distributed to provinces containing more migrant population due to
+fiscal decentralization. On the other hand, the \emph{Hukou} policy
+\footnote{The Hukou Policy is a population management policy that
+  restraints non-local residents from/uplifts the threshold of enjoying
+  the same social, medical, and educational public services as local
+  households do.} has a history of limiting policy supports for internal
+migrants including subsidies, fee standards, and other financial
+accesses, which contributes migrant students' underperformance in school
+(\citeproc{ref-luVillagersCityResilience2023}{Lu, 2023}).
 
-\subsection{Methods}\label{methods}
+However, both perspectives have failed to identify an integrated
+framework: if we can discover the impact of differentiated financial
+supports and per student funding appropriated to two groups of students,
+then it is plausible to assume that fiscal decentralization is producing
+local-migrant educational inequity through the lens of Hukou status.
 
-\subsection{Analysis Results}\label{analysis-results}
+In this study, I seek to understand \textbf{how governments'
+differentiated provision of education fundings affects the academic
+performance gap between migrant students and local students in China} .
+My hypothesis is \textbf{when the government provides migrant students
+with limited fundings, and less-supportive charging standards and
+subsidy policies, the academic performance gap between the two groups of
+students is likely to widen}.
 
-\subsection{Conclusion}\label{conclusion}
+Beyond measuring educational disparities created by the complexity of
+fiscal decentralization and population management system, this research
+has practical significance for addressing the ongoing migrant problems
+in China's urban governance and the institution of compulsory education
+(\citeproc{ref-nationalbureauofstatisticsofchinaetal_2023_what}{National
+Bureau of Statistics of China et al., 2023}). Last but not least, this
+study can also offer indications for how educational finance and
+policies provided by government interacts with structural inequality in
+other social contexts (e.g., areas with higher poverty level or racial
+disparities, see in studies by Baird
+(\citeproc{ref-baird_2008_federal}{2008}) and Hyman
+(\citeproc{ref-hyman_2017_does}{2017})).
+
+\section{Literature Review}\label{literature-review}
+
+The imbalance of education finance provision increases the overall
+stress of providing equal education service to local-registered
+residents and migrant influx
+(\citeproc{ref-jinRegionalDecentralizationFiscal2005a}{Jin et al.,
+2005}). producing biased human capital investments in education system
+(\citeproc{ref-heckmanChinasHumanCapital2005}{Heckman, 2005})
+
+\section{Methods}\label{methods}
+
+\section{Analysis Results}\label{analysis-results}
+
+\section{Conclusion}\label{conclusion}
 
 \clearpage
 
-\subsection{References}\label{references}
+\section{References}\label{references}
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
-\bibitem[\citeproctext]{ref-adamFiscalDecentralizationPublic2014}
-Adam, A., Delis, M. D., \& Kammas, P. (2014). Fiscal {Decentralization}
-and {Public Sector Efficiency}: {Evidence} from {OECD Countries}.
-\emph{Economics of Governance}, \emph{15}(1), 17--49.
-\url{https://doi.org/10.1007/s10101-013-0131-4}
+\bibitem[\citeproctext]{ref-baird_2008_federal}
+Baird, K. E. (2008). Federal {Direct Expenditures} and {School Funding
+Disparities}, 1990-2000. \emph{Journal of Education Finance},
+\emph{33}(3), 297--310. \url{https://www.jstor.org/stable/40704331}
+
+\bibitem[\citeproctext]{ref-chenAccessPublicSchools2013}
+Chen, Y., \& Feng, S. (2013). Access to public schools and the education
+of migrant children in {China}. \emph{China Economic Review}, \emph{26},
+75--88. \url{https://doi.org/10.1016/j.chieco.2013.04.007}
+
+\bibitem[\citeproctext]{ref-heckmanChinasHumanCapital2005}
+Heckman, J. J. (2005). China's human capital investment. \emph{China
+Economic Review}, \emph{16}(1), 50--70.
+\url{https://doi.org/10.1016/j.chieco.2004.06.012}
+
+\bibitem[\citeproctext]{ref-huangMythMigrantsProblems2017a}
+Huang, E. (2017). The myth of 'migrants as problems': {Public} school in
+neoliberal times and the construction and contestation of 'migrant'
+identity. \emph{Journal of Language, Identity, and Education},
+\emph{16}(6), 381--394.
+\url{https://doi.org/10.1080/15348458.2017.1381022}
+
+\bibitem[\citeproctext]{ref-hyman_2017_does}
+Hyman, J. (2017). Does {Money Matter} in the {Long Run}? {Effects} of
+{School Spending} on {Educational Attainment}. \emph{American Economic
+Journal: Economic Policy}, \emph{9}(4), 256--280.
+\url{https://www.jstor.org/stable/26598353}
+
+\bibitem[\citeproctext]{ref-jinRegionalDecentralizationFiscal2005a}
+Jin, H., Qian, Y., \& Weingast, B. R. (2005). Regional decentralization
+and fiscal incentives: {Federalism}, {Chinese} style. \emph{Journal of
+Public Economics}, \emph{89}(9-10), 1719--1742.
+\url{https://doi.org/10.1016/j.jpubeco.2004.11.008}
+
+\bibitem[\citeproctext]{ref-liDataAnalysisCurrent2018}
+Li, N. (2018). \emph{{Data analysis: Current situation, problems and
+countermeasures of the financial system of compulsory education for
+migrant children}}.
+https://www.thepaper.cn/newsDetail\_forward\_2673802.
+
+\bibitem[\citeproctext]{ref-luVillagersCityResilience2023}
+Lu, S. (2023). '{Villagers} in the {City}': {Resilience} in migrant
+youth amidst urbanisation. \emph{British Journal of Social Work},
+\emph{53}(1), 236--257. \url{https://doi.org/10.1093/bjsw/bcac122}
+
+\bibitem[\citeproctext]{ref-nationalbureauofstatisticsofchinaetal_2023_what}
+National Bureau of Statistics of China, UNICEF China, \& UNFPA China.
+(2023). \emph{What the 2020 {Census Can Tell Us About Children} in
+{China}: {Facts} and {Figures}}.
+https://www.unicef.cn/en/reports/population-status-children-china-2020-census.
 
 \end{CSLReferences}
 
